//=====================================================================
//	Revision History for package Installation
//=====================================================================


//---------------------------------------------------------------------
//	actual revision
//---------------------------------------------------------------------

GLOB: patched to support the FreeBSD printf
GLOB: VC7 is supported, VC6 is not anymore.
GLOB: Fix typo.
GLOB: Move GMP link options at the end.
GLOB: added licensing information about Qt widget stuff
GLOB: updated for release 2.4
GLOB: ABI=32 for GMP also has to be set for GCC, not only SunPRO.
GLOB: Fix order of libraries (gmp must come after gmpxx and qt).
GLOB: Fix support for GMP++
ALL : - update GMP to version 4.1
ALL : - add support for GMP++
ALL : - use configure to install GMP
ALL : Document CLN version requirements (<1.1)
GLOB: Qt license updates
GLOB: - Document --build-all
GLOB: Fixes for QT.
GLOB: src/Interval_arithmetic/workaround_4_ms.obj is no longer necessary.
GLOB: Add -D_RWSTD__ALLOCATOR for SunPro.
ALL : 2.4 -> 2.5
GLOB: Fixed runtime path for Irix/gcc.
GLOB: Updated windos install for gmp to V4.0.1.
GLOB: Removed include/compilers/vc7 from include path for VC7.
GLOB: QT fixed from Radu.
GLOB: Yet other fixes for Qt (Qt support hasn't been yet tested enough)
GLOB: Added .moc to REMOVE_EXT_LIST.
GLOB: Fixed qtlib option.
GLOB: Fixed several things for qt-support. (<- Laurent)
GLOB: Added CGAL_QT_LDFLAGS.
GLOB: Some fixes for qt-moc.
GLOB: _posix_path -> posix_path. (<- Andreas)
GLOB: Some changes for Qt support on cygwin. (<- Radu)
GLOB: Fixed gmp install for sunpro.
GLOB: Fixed gmp installation.
GLOB: Removed -Wall for g++ on Solaris. (<- GJ)
GLOB: Copy libgmp always, do not link.
GLOB: Changed test_leda to take into account namespace leda. (<- Matthias)
GLOB: Changed handling of libgmp: also treat shared libs.
GLOB: Add flag -MLd for msvc.
GLOB: Mark MSVC6 as supported.